fix: fix fix top nav link position mobile

--- a/src/scss/components/main-menu.scss
+++ b/src/scss/components/main-menu.scss
@@ -27,7 +27,7 @@
 			li{
 				width: 100%;
 				padding: 0 2.4rem;
-				text-align: center;
+				text-align: left;
 				ul{
 					padding-top: 1rem;
 					li{
