--- a/src/scss/components/slider.scss
+++ b/src/scss/components/slider.scss
@@ -3,7 +3,7 @@
 		font-size: 0px;
 		width: 3rem;
 		height: 1.5rem;
-		background-size: contain;
+		background-size: 5.4rem;
 		background-repeat: no-repeat;
 		@include clear-btn;
 	}
@@ -204,7 +204,7 @@ button[data-action='stop'] {
 	.blockquote-slider-next{
 		width: 5.6rem;
 		height: 5.6rem;
-		background-size: cover;
+		background-size: 5.4rem;
 		background-repeat: no-repeat;
 		outline: none;
 		cursor: pointer;
@@ -256,7 +256,7 @@ button[data-action='stop'] {
 	.tns-controls [data-controls=next]{
 		width: 5.6rem;
 		height: 5.6rem;
-		background-size: cover;
+		background-size: 5.4rem;
 		background-repeat: no-repeat;
 		outline: none;
 		cursor: pointer;
